# volunteer-responsibility-amnesty-day-calendar

./: generate_calendar.py  pyproject.toml
