[tool.poetry]
name = "volunteer-responsibility-amnesty-day-calendar"
version = "0.1.0"
description = "Python code to generate the (unofficial) public Volunteer Responsibility Amnesty Day calendar"
authors = ["AJ Jordan <alex@strugee.net>"]
license = "CC0"
readme = "README.md"
packages = [{include = "volunteer_responsibility_amnesty_day_calendar"}]

[tool.poetry.dependencies]
python = "^3.11"
ephem = "^4.1.5"
ical = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
